<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/submit4"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".HomeActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                android:focusable="true"
                android:layout_marginRight="10dp"
                android:onClick="peer"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/cerclebackgroundpurple"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="1st"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="1st Half"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="1st half of Peer Kamil"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                android:focusable="true"
                android:layout_marginRight="10dp"
                android:onClick="scnd">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/cerclebackgroundpink"
                        android:text="2nd"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="cursive"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="2nd half" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="2nd half of Peer Kamil"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                android:focusable="true"
                android:layout_marginRight="10dp"
                android:onClick="about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/cerclebackgroundpink"
                        android:text="@string/title_About"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="cursive"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/more_about_us" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightgray"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_about_us"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"

                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                android:focusable="true"
                android:layout_marginRight="10dp"
                android:onClick="exit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/cerclebackgroundyello"
                        android:padding="10dp"
                        android:text="@string/exit"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:fontFamily="cursive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/exit"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/are_you_sure_want_to_exit"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/content_main" />
</android.support.design.widget.CoordinatorLayout>